added important dates and documents

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ links:
         url: /venue/
     -   title: Program
         url: /program/
+    -   title: Demos
+        url: /demos/
     -   title: Workshops
         url: /workshops/
     -   title: Sponsors
