made submission for demos and posters clickable

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ links:
         url: /venue/
     -   title: Program
         url: /program/
-    -   title: Demos
+    -   title: Posters/Demos
         url: /demos/
     -   title: Workshops
         url: /workshops/
