Added top-level menu for DC and a date change

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ links:
         url: /demos/
     -   title: Workshops
         url: /workshops/
+    -   title: DC
+        url: /dc/
     -   title: Sponsors
         url: /sponsors/
 
