added affiliation for posters

--- a/_data/demos.yml
+++ b/_data/demos.yml
@@ -7,6 +7,9 @@
 - title: Interconnecting Zigbee and Bluetooth networks with BLupZi
   authors: Armando Rivero, Gianluca Costante, Edoardo Bonizzoni, Alessandro Puiatti and Anna Förster
   
+- title: "Gotcha - A Mobile Urban Sensing System"
+  authors: Xiangxiang Xu, Pei Zhang and Lin Zhang
+  
 - title: Group Analytics and Insights for Public Spaces
   authors: Rijurekha Sen, Youngki Lee, Kasthuri Jayarajah, Shriguru Nayak, Archan Misra and Rajesh Balan
   
