removed fedex, fixed author on papers

--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -43,7 +43,7 @@
   affiliation: University of Washington
 
 - title: "iLocScan: Harnessing Multipath for Simultaneous Indoor Source Localization and Space Scanning"
-  authors: Chi Zhang
+  authors: Chi Zhang, Feng Li, Jun Luo, Ying He
   affiliation: Nanyang Technological University
   
 - title: "AirCloud: A Cloud-based Air-Quality Monitoring System for Everyone"
